--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "dependencies": {
     "babel-polyfill": "^6.8.0",
     "combine-section-reducers": "^1.0.4",
+    "highcharts": "^4.2.6",
+    "highcharts-more": "^0.1.2",
     "material-ui": "^0.15.3",
     "react": "^15.0.2",
     "react-dom": "^15.0.1",
+    "react-highcharts": "^10.0.0",
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
