--- a/package.json
+++ b/package.json
@@ -7,12 +7,13 @@
     "highcharts": "^4.2.6",
     "highcharts-more": "^0.1.2",
     "material-ui": "^0.15.3",
-    "react": "^15.3.2",
-    "react-dom": "^15.0.1",
+    "react": "~15.3.2",
+    "react-dom": "~15.3.2",
     "react-highcharts": "^10.0.0",
     "react-redux": "^4.4.5",
-    "react-tap-event-plugin": "^2.0.1",
+    "react-tap-event-plugin": "^1.0.0",
     "react-throttle-render": "^1.2.0",
+    "react-tooltip": "^3.2.2",
     "redux": "^3.5.2",
     "redux-actions": "^0.10.1",
     "redux-concatenate-reducers": "^1.0.0",
