--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "babel-polyfill": "^6.8.0",
+    "clone": "^2.1.1",
     "combine-section-reducers": "^1.0.4",
     "highcharts": "^4.2.6",
     "highcharts-more": "^0.1.2",
@@ -13,12 +14,14 @@
     "react-redux": "^4.4.5",
     "react-tap-event-plugin": "^1.0.0",
     "react-throttle-render": "^1.2.0",
-    "react-tooltip": "^3.2.2",
+    "react-tooltip": "^3.2.7",
+    "reduce-reducers": "^0.1.2",
     "redux": "^3.5.2",
+    "redux-act": "^1.1.1",
     "redux-actions": "^0.10.1",
     "redux-concatenate-reducers": "^1.0.0",
     "redux-logger": "^2.6.1",
-    "redux-saga": "^0.10.4"
+    "redux-saga": "^0.10.5"
   },
   "devDependencies": {
     "babel-core": "^6.13.2",
