--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "combine-section-reducers": "^1.0.4",
     "highcharts": "^4.2.6",
     "highcharts-more": "^0.1.2",
+    "jsondiffpatch": "^0.2.4",
     "material-ui": "^0.15.3",
     "react": "~15.3.2",
     "react-dom": "~15.3.2",
