--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
     "cross-env": "^2.0.1",
+    "highcharts-more": "^0.1.2",
     "webpack": "^1.13.0"
   },
   "scripts": {
