--- a/package.json
+++ b/package.json
@@ -2,36 +2,41 @@
   "name": "xee-boilerplate",
   "version": "1.0.0",
   "dependencies": {
-    "babel-polyfill": "^6.8.0",
-    "clone": "^1.0.2",
-    "highcharts": "^4.2.6",
-    "json-loader": "^0.5.4",
+    "@babel/cli": "^7.0.0",
+    "@babel/core": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.0.0",
+    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-react": "^7.0.0",
+    "clone": "^2.1.2",
+    "highcharts": "^6.1.1",
     "jsondiffpatch": "0.3.11",
     "lodash": "^4.17.10",
-    "material-ui": "^0.15.4",
-    "react": "~15.3.2",
-    "react-dom": "~15.3.2",
-    "react-highcharts": "^10.0.0",
-    "react-motion": "^0.4.4",
-    "react-redux": "^4.4.5",
-    "react-swipeable-views": "^0.7.3",
-    "react-tap-event-plugin": "^1.0.0",
-    "react-throttle-render": "^1.2.0",
+    "material-ui": "^0.20.2",
+    "react": "^16.4.2",
+    "react-dom": "~16.4.2",
+    "react-highcharts": "^16.0.2",
+    "react-motion": "^0.5.2",
+    "react-redux": "^5.0.7",
+    "react-swipeable-views": "^0.12.16",
+    "react-tap-event-plugin": "^3.0.3",
+    "react-throttle-render": "^2.0.0",
     "react-tooltip": "^3.2.2",
-    "reduce-reducers": "^0.1.2",
-    "redux": "^3.5.2",
+    "reduce-reducers": "^0.4.3",
+    "redux": "^4.0.0",
     "redux-act": "^1.0.0",
-    "redux-logger": "^2.6.1",
-    "redux-saga": "^0.10.4"
+    "redux-logger": "^3.0.6",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
     "babel-core": "^6.7.7",
-    "babel-loader": "^6.2.4",
+    "babel-loader": "^8.0.0",
     "babel-preset-es2015": "^6.6.0",
     "babel-preset-react": "^6.5.0",
-    "cross-env": "^2.0.1",
+    "cross-env": "^5.2.0",
     "highcharts-more": "^0.1.2",
-    "webpack": "^1.13.0"
+    "webpack": "^4.17.1",
+    "webpack-cli": "^3.1.0"
   },
   "scripts": {
     "build:dev": "webpack",
