--- a/package.json
+++ b/package.json
@@ -2,40 +2,29 @@
   "name": "xee-boilerplate",
   "version": "1.0.0",
   "dependencies": {
-    "@babel/cli": "^7.0.0",
-    "@babel/core": "^7.0.0",
+    "@babel/core": "^7.1.0",
     "@babel/polyfill": "^7.0.0",
-    "@babel/preset-env": "^7.0.0",
-    "@babel/preset-es2015": "^7.0.0-beta.53",
+    "@babel/preset-env": "^7.1.0",
     "@babel/preset-react": "^7.0.0",
     "clone": "^2.1.2",
-    "highcharts": "^6.1.1",
-    "jsondiffpatch": "0.3.11",
-    "lodash": "^4.17.10",
-    "material-ui": "^0.20.2",
-    "react": "^16.4.2",
-    "react-dom": "~16.4.2",
+    "highcharts-more": "^0.1.7",
+    "jsondiffpatch": "^0.3.11",
+    "material-ui": "0.19.4",
+    "react": "^15.6.2",
+    "react-dom": "^15.6.2",
     "react-highcharts": "^16.0.2",
-    "react-motion": "^0.5.2",
     "react-redux": "^5.0.7",
-    "react-swipeable-views": "^0.12.16",
-    "react-tap-event-plugin": "^3.0.3",
-    "react-throttle-render": "^2.0.0",
-    "react-tooltip": "^3.2.2",
+    "react-swipeable-views": "0.11.2",
+    "react-throttle-render": "1.2.0",
     "reduce-reducers": "^0.4.3",
     "redux": "^4.0.0",
-    "redux-act": "^1.0.0",
+    "redux-act": "^1.7.4",
     "redux-logger": "^3.0.6",
     "redux-saga": "^0.16.0"
   },
   "devDependencies": {
-    "babel-core": "^6.7.7",
-    "babel-loader": "^8.0.0",
-    "babel-preset-es2015": "^6.6.0",
-    "babel-preset-react": "^6.5.0",
-    "cross-env": "^5.2.0",
-    "highcharts-more": "^0.1.2",
-    "webpack": "^4.17.1",
+    "babel-loader": "^8.0.2",
+    "webpack": "^4.19.1",
     "webpack-cli": "^3.1.0"
   },
   "scripts": {
