--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "scripts": {
     "build:dev": "webpack",
     "build:watch": "webpack -w",
-    "build:prod": "cross-env NODE_ENV=production ./node_modules/webpack/bin/webpack.js -p --config webpack.production.config.js",
+    "build:prod": "webpack --mode production",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
